--- a/index.html
+++ b/index.html
@@ -176,19 +176,9 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident</h3>
+            <h3>Why Choose NoteTrove?</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
-            </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              Welcome to NoteTrove, a collaborative platform where students can share their knowledge by uploading notes, summaries, and study materials, which are verified by experienced teachers to ensure accuracy and reliability. Our mission is to combine the collective efforts of students with the expertise of educators to create a resource-rich environment that supports academic success. Whether you're a student seeking study aids or a teacher passionate about guiding the next generation, NoteTrove is here to support your journey, fostering a community where knowledge is shared, verified, and accessible to all.
             </p>
           </div>
         </div>
