--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Login</a>
+      <a class="btn-getstarted" href="index.html">Login</a>
 
     </div>
   </header>
