--- a/st.html
+++ b/st.html
@@ -16,6 +16,6 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
     </form>
-    <a href="index.html"><button>Login</button></a>
+    <a href="upload.html"><button>Login</button></a>
 </body>
 </html>
