--- a/teach.html
+++ b/teach.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <h2>Teacher Login</h2>
-    <form action="/auth/login" method="POST">
+    <form>
         <input type="hidden" name="role" value="teacher">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
     </form>
+    <a href="dash.html"><button>Login</button></a>
 </body>
 </html>
