--- a/index.html
+++ b/index.html
@@ -302,12 +302,6 @@
           </div>
 
           <div class="col-lg-6">
-
-            <h3 class="fw-bold fs-2 mb-3">Voluptatem dignissimos provident quasi</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-            </p>
-
             <div class="row gy-4">
 
               <div class="col-lg-6">
@@ -315,7 +309,7 @@
                   <i class="bi bi-emoji-smile flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> <span>consequuntur quae</span></p>
+                    <p><strong>Satisfied Students</strong></p>
                   </div>
                 </div>
               </div><!-- End Stats Item -->
@@ -325,7 +319,7 @@
                   <i class="bi bi-journal-richtext flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> <span>adipisci atque cum quia aut</span></p>
+                    <p><strong>Notes</strong></p>
                   </div>
                 </div>
               </div><!-- End Stats Item -->
@@ -335,7 +329,7 @@
                   <i class="bi bi-headset flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Hours Of Support</strong> <span>aut commodi quaerat</span></p>
+                    <p><strong>Users</strong></p>
                   </div>
                 </div>
               </div><!-- End Stats Item -->
@@ -345,7 +339,7 @@
                   <i class="bi bi-people flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Hard Workers</strong> <span>rerum asperiores dolor</span></p>
+                    <p><strong>Faculties</strong></p>
                   </div>
                 </div>
               </div><!-- End Stats Item -->
