--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="row gy-4 align-items-center justify-content-between">
 
           <div class="col-lg-5">
-            <img src="assets/img/stats-img.jpg" alt="" class="img-fluid">
+            <img src="image.jpg" alt="" class="img-fluid">
           </div>
 
           <div class="col-lg-6">
@@ -318,7 +318,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-journal-richtext flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="101" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Notes</strong></p>
                   </div>
                 </div>
@@ -328,7 +328,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-headset flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="501" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Users</strong></p>
                   </div>
                 </div>
