--- a/index.html
+++ b/index.html
@@ -274,15 +274,14 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/cta-bg.jpg" alt="">
+      <img src="img44.jpg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
             <div class="text-center">
-              <h3>Call To Action</h3>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <a class="cta-btn" href="#">Call To Action</a>
+              <h3>Grab your rewards!</h3>
+              <p>Every time students upload their work, they're in the running to grab amazing rewards, and each correction or verification gives teachers a chance to earn fantastic rewards!</p>
             </div>
           </div>
         </div>
@@ -308,7 +307,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-emoji-smile flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="376" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Satisfied Students</strong></p>
                   </div>
                 </div>
