--- a/dash.html
+++ b/dash.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="treward.css">
 </head>
 <body>
+    <div class="overlay"></div>
+        <div class="rew-container" >
     <h1>Welcome, <span id="teacherName">[Teacher Name]</span></h1>
     <p>Your Rewards: <span id="teacherRewards">0</span></p>
 
     <h1>Pending Notes</h1>
+    </div>
     <div id="notesContainer"></div>
 
     <script>
