--- a/os.html
+++ b/os.html
@@ -185,7 +185,7 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="pdf.jpg" alt="" class="img-fluid services-img">
+            <img src="pdf2.jpg" alt="" class="img-fluid services-img" style="margin-right: 20px;">
             
           </div>
 
