--- a/teach.html
+++ b/teach.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-log.css">
 </head>
 <body>
-    <h2>Teacher Login</h2>
-    <form>
-        <input type="hidden" name="role" value="teacher">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-    </form>
-    <a href="dash.html"><button>Login</button></a>
+    <div class="overlay"></div>
+        <div class="login-container" >
+        <h2>Teacher Login</h2>
+        <form>
+            <input type="hidden" name="role" value="teacher">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </form>
+        <a href="dash.html"><button>Login</button></a>
+    </div>
 </body>
 </html>
 
