--- a/geology.html
+++ b/geology.html
@@ -185,9 +185,9 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="pdf.jpg" alt="" class="img-fluid services-img">
-            <img src="pdf.jpg" alt="" class="img-fluid services-img">
-            <img src="pdf.jpg" alt="" class="img-fluid services-img">
+            <img src="pdf2.jpg" alt="" class="img-fluid services-img" style="margin-right: 20px;">
+            <img src="pdf2.jpg" alt="" class="img-fluid services-img" style="margin-right: 20px;">
+            <img src="pdf2.jpg" alt="" class="img-fluid services-img" style="margin-right: 20px;">
           </div>
 
         </div>
