--- a/upload.html
+++ b/upload.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Notes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-log.css">
 </head>
 <body>
-    <h1>Upload Your Notes</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br><br>
-        <label for="file">Choose file:</label>
-        <input type="file" id="file" name="file" required><br><br>
-        <button type="submit">Upload</button>
-    </form>
+    <div class="overlay"></div>
+        <div class="login-container" >
+        <h1>Upload Your Notes</h1>
+        <form id="uploadForm" enctype="multipart/form-data">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required><br><br>
+            <label for="file">Choose file:</label>
+            <input type="file" id="file" name="file" required><br><br>
+            <button type="submit">Upload</button>
+        </form>
+        </div>
 
     <script>
         const form = document.getElementById('uploadForm');
