--- a/dash.html
+++ b/dash.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="treward.css">
 </head>
 <body>
+    <a href="index.html"><button class="home">Home</button></a>
     <div class="overlay"></div>
         <div class="rew-container" >
     <h1>Welcome, <span id="teacherName">[Teacher Name]</span></h1>
