--- a/st_dash.html
+++ b/st_dash.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="index.html"><button class="home">Home</button></a>
     <h1>Welcome, [Student Name]</h1>
     <p>Your Rewards: <span id="studentRewards"></span></p>
 
