--- a/teach.html
+++ b/teach.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style-log.css">
 </head>
 <body>
+    <a href="index.html"><button class="home">Home</button></a>
     <div class="overlay"></div>
         <div class="login-container" >
         <h2>Teacher Login</h2>
