--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
               <div class="col-lg-6">
                 <div class="stats-item d-flex">
-                  <i class="bi bi-headset flex-shrink-0"></i>
+                  <i class="bi bi-people flex-shrink-0"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="501" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Users</strong></p>
@@ -335,7 +335,7 @@
 
               <div class="col-lg-6">
                 <div class="stats-item d-flex">
-                  <i class="bi bi-people flex-shrink-0"></i>
+                  <i class="fa fa-chalkboard-user"></i>
                   <div>
                     <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Faculties</strong></p>
