--- a/upload.html
+++ b/upload.html
@@ -9,9 +9,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>    
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-log.css">
 </head>
 <body>
+    <a href="index.html"><button class="home">Home</button></a>
+    <div class="overlay"></div>
+    <div class="login-container" >
     <h1>Upload Your Notes</h1>
     <form id="uploadForm">
         <label for="title">Title:</label>
@@ -20,7 +23,7 @@
         <input type="file" id="file" required><br><br>
         <button type="submit">Upload</button>
     </form>
-
+    </div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-storage.js";
