--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="nt1.png" type="image/x-icon">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>NoteTrove</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
