--- a/upload.html
+++ b/upload.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <a href="index.html"><button class="home">Home</button></a>
+    <a href="approved.html"><button class="approvedn">Approved Notes</button></a>
     <div class="overlay"></div>
     <div class="login-container" >
     <h1>Upload Your Notes</h1>
